--- a/styles/main.css
+++ b/styles/main.css
@@ -13,6 +13,10 @@ body {
 header {
   height: 10%;
   flex-direction: row;
+  font-family: 'Cinzel', serif;
+  text-align: center;
+  font-size: 20px;
+
 }
 main {
   display: flex;
@@ -27,8 +31,16 @@ main {
   flex-wrap: wrap;
   height: 70%;
   justify-content: center;
-  max-height: 350px;
-  max-width: 300px;
+  height: 411px;
+  width: 361px;
+  border:solid 5vmin #eee;
+  border-bottom-color:#fff;
+  border-left-color:#eee;
+  border-radius:2px;
+  border-right-color:#eee;
+  border-top-color:#ddd;
+  box-shadow:0 0 5px 0 rgba(0,0,0,.25) inset, 0 5px 10px 5px rgba(0,0,0,.25);
+  
 }
 .results {
   display: flex;
@@ -41,6 +53,10 @@ div {
 div.results {
   display: flex;
   flex-direction: column;
+  background-image: url('/Images/nameplate.png');
+  background-repeat: no-repeat;
+  margin: 20px 10px 10px 10px;
+  background-position: center;
 }
    
 div .wall {
@@ -102,4 +118,30 @@ div div .activate {
   0%, 50% {
     background-color: pink;
   }
+}
+.intro {
+  align-items: center;
+
+  display: flex;
+  flex-grow: 1;
+  flex-wrap: wrap;
+  height: 70%;
+  justify-content: center;
+  height: 350px;
+  width: 300px;
+  position:relative;
+  text-align:center; 
+
+}
+.score, .life {
+  text-align: center;
+  color: black;
+  font-family: 'Cinzel', serif;
+  font-weight: 600;
+}
+.score {
+  margin: 10px 10px 5px 10px
+}
+.life {
+  margin: 5px 10px 10px 10px
 }
