--- a/styles/main.css
+++ b/styles/main.css
@@ -53,7 +53,7 @@ div {
 div.results {
   display: flex;
   flex-direction: column;
-  background-image: url('/Images/nameplate.png');
+  background-image: url('../Images/nameplate.png');
   background-repeat: no-repeat;
   margin: 20px 10px 10px 10px;
   background-position: center;
@@ -82,6 +82,7 @@ div .fruit {
   align-content: center; */
   justify-content: center;
   align-items: center;
+  color:  rgb(44,3,143)
 }
 div .empty {
   flex-grow: 1;
@@ -99,7 +100,7 @@ div .pill {
   flex-grow: 1;
   height: 15.78px;
   width: 15.78px;
-  background-color: rgb(29, 0, 94);
+  background-color: rgb(44,3,143);
 }
 div .pacman {
   flex-grow: 1;
@@ -123,12 +124,12 @@ div div .activate {
 
 @keyframes Flash {
   50% {
-    background-color:rgb(29, 0, 94);
+    background-color:rgb(44, 3, 143);
   }
 }
 .intro {
   align-items: center;
-  background-image: url('/Images/rsz_composition-c.jpg');
+  background-image: url('../Images/rsz_composition-c.jpg');
   display: flex;
   flex-grow: 1;
   flex-wrap: wrap;
@@ -144,6 +145,7 @@ div div .activate {
   text-align: center;
   color: black;
   font-family: 'Cinzel', serif;
+  font-size: 10px;
   /* font-weight: bold; */
 }
 .score {
